# FYP_WS

./: .gitignore  1_gazebo_start.sh  2_camera_info_pub.sh  3_camera_AprilTag_Start.sh  IMU.bash  calibrate.sh  camera_AprilTag_Start.sh  data_colection.sh  data_colection_gnss.sh  data_colection_vicon.sh  gazebo_start.sh  offboard_landing.sh  offboard_test.sh  simulation.sh  start_all.sh  temp.bash  test.sh
Simulation/: env_set.sh
src/PX4-Autopilot/Tools/simulation/gazebo-classic/sitl_gazebo-classic/models/iris_fpv_cam/: iris_fpv_cam.sdf
src/apriltag_pose_pub/: CMakeLists.txt  package.xml
src/apriltag_pose_pub/launch/: apriltag_tracking.launch
src/apriltag_pose_pub/src/: apriltag_pose_pub.cpp
src/apriltag_ros/config/: settings.yaml  tags.yaml  tags_back.yaml
src/apriltag_ros/launch/: iris_continuous_detection.launch
src/drone_apriltag_tracking_Landing/: README.md  package.xml
src/drone_apriltag_tracking_Landing/launch/: apriltag_tracking.launch  sitl_gazebo_custom.launch
src/drone_apriltag_tracking_Landing/src/: apriltag_tracking.cpp
src/gps_to_rtcm_converter/: CMakeLists.txt  package.xml
src/gps_to_rtcm_converter/launch/: gps_converter.launch
src/gps_to_rtcm_converter/src/: gps_to_rtcm_converter.cpp
src/my_offboard_node/: CMakeLists.txt  offb.launch  package.xml
src/my_offboard_node/config/: traj.yaml
src/my_offboard_node/include/: gen_traj.h
src/my_offboard_node/src/: offb_node.cpp
src/my_offboard_node/tools/: gen_traj.py
src/my_offboard_node/traj/: p2p.txt
src/ntrip_client/launch/: ntrip_client.launch
src/offboard_landing/: CMakeLists.txt  package.xml
src/offboard_landing/launch/: offb.launch
src/offboard_landing/src/: offboard_landing.cpp
src/offboard_landing_gnss/: CMakeLists.txt  package.xml
src/offboard_landing_gnss/launch/: offb.launch
src/offboard_landing_gnss/src/: offboard_landing_gnss.cpp
src/vicon_mission/: CMakeLists.txt  package.xml
src/vicon_mission/launch/: mission.launch
src/vicon_mission/src/: vicon_mission.cpp
src/vrpn_client_ros-0.2.2/launch/: sample.launch
