<?xml version="1.0"?>
<package format="2">
  <name>apriltag_pose_pub</name>
  <version>0.1.0</version>
  <description>AprilTag pose estimation with GNSS fusion</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>apriltag_ros</depend>
  <depend>eigen_conversions</depend>

  <build_depend>Eigen3</build_depend>
  <exec_depend>eigen3</exec_depend>

</package>