<?xml version="1.0"?>
<package format="2">
  <name>gps_converter</name>
  <version>0.0.1</version>
  <description>MAVROS GPS to NMEA converter</description>

  <maintainer email="user@example.com">User</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>mavros_msgs</depend>
  <depend>nmea_msgs</depend>
</package>