<?xml version="1.0"?>
<package format="2">
  <name>my_offboard_node</name>
  <version>0.0.0</version>
  <description>The my_offboard_node package</description>

  <maintainer email="nvidia@todo.todo">nvidia</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <!-- <build_depend>mavros_msgs</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <!-- <build_export_depend>mavros_msgs</build_export_depend> -->
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <!-- <exec_depend>mavros_msgs</exec_depend> -->
  <exec_depend>roscpp</exec_depend>


  <!-- <depend>mavros_msgs</depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
