<?xml version="1.0"?>
<package format="2">
  <name>offboard_landing</name>
  <version>0.0.1</version>
  <description>The drone_control package</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>mavros_msgs</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>