<?xml version="1.0"?>
<package format="2">
  <name>offboard_landing</name>
  <version>0.1.0</version>
  <description>PX4 offboard landing controller with AprilTag support</description>

  <maintainer email="user@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf2_eigen</depend>

  <build_depend>cmake_modules</build_depend>
</package>